[package]
name = "zentinel-agent-zentinelsec"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Zentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-zentinelsec"
homepage = "https://zentinelproxy.io"
documentation = "https://zentinelproxy.io/docs/agents/zentinelsec"
description = "Pure Rust ModSecurity-compatible WAF agent for Zentinel - Full OWASP CRS support without C dependencies"
keywords = ["zentinel", "proxy", "agent", "waf", "modsecurity"]
categories = ["network-programming"]
readme = "README.md"

[lib]
name = "zentinel_agent_zentinelsec"
path = "src/lib.rs"

[[bin]]
name = "zentinel-zentinelsec-agent"
path = "src/main.rs"

[dependencies]
# Zentinel protocol
zentinel-agent-protocol = { version = "0.5", git = "https://github.com/zentinelproxy/zentinel.git", package = "zentinel-agent-protocol" }
zentinel-common = { version = "0.5", git = "https://github.com/zentinelproxy/zentinel.git", package = "zentinel-common" }

# Pure Rust ModSecurity implementation
zentinel-modsec = { version = "0.1", git = "https://github.com/zentinelproxy/zentinel-modsec.git" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Glob pattern matching for rule files
glob = "0.3"

# Base64 decoding for body chunks
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
